--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -159,10 +159,12 @@
 <!ENTITY Ctr_cpanelmenus	"Αναδυόμενα μενού πίνακα (σελιδοδείκτες, ιστορικό κλπ): συνεπτυγμένη προβολή">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας (about:newtab): εναλλακτική εμφάνιση">
+<!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
 <!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα (προτίμηση «about:config»)">
 <!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: αναζήτηση σε νέα καρτέλα στο προσκήνιο">
+<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_dm		"Μικρός δείκτης ανάπτυξης">
 <!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
 <!ENTITY Ctr_alt_addonsp	"Σελίδα «Περισσότερα»: εναλλακτική σειρά περιεχομένου">
