--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -159,10 +159,12 @@
 <!ENTITY Ctr_cpanelmenus	"Paneelimenüüd (järjehoidjad, ajalugu jms.): kompaktne vaade">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
+<!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil (about:config eelistus)">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
+<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
