--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -159,12 +159,12 @@
 <!ENTITY Ctr_cpanelmenus	"Paneelimenüüd (järjehoidjad, ajalugu jms.): kompaktne vaade">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_search_ui		"Otsing">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil (about:config eelistus)">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
+<!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
@@ -337,7 +337,7 @@
 
 <!ENTITY Ctr_otherctroptns	"Muud sätted">
 <!ENTITY Ctr_cuibotbuttons	"Lisanupud menüüde ja tööriistaribade kohandamise režiimis">
-<!ENTITY Ctr_nodevtheme		"Ära luba 'Arendaja väljalaske välimust' sisse lülitada">
+<!ENTITY Ctr_nodevtheme		"Ära luba arendaja väljalaske välimust sisse lülitada">
 
 <!ENTITY Ctr_experttweaks	"Täpsemad">
 <!ENTITY Ctr_fx34search		"Sellelt eelistuselt märke eemaldamine eemaldab 'uue otsingu välimuse' ja taastab vanema.">
