--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -159,6 +159,7 @@
 <!ENTITY Ctr_cpanelmenus	"Panelmenu-popups: kompakt visning (bogmærker, historik, osv.): kompakt visning">
 <!ENTITY Ctr_hidezoomres	"Zoom-knapper på værktøjslinje: skjul zoom-nulstil-knapper">
 <!ENTITY Ctr_alt_newtabp	"Nyt faneblad-side (about:newtab): alternativt udseende">
+<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
 <!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Gamle søgning">
 <!ENTITY Ctr_ctroldsearchc	"Ryd søgeboks efter søgning">
@@ -183,6 +184,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'usorterede bogmærker'-undermenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: vis 'Vis værktøjslinje'">
 <!ENTITY Ctr_bmbnounsort	"Popup: skjul 'usorterede bogmærker'">
 <!ENTITY Ctr_bmbutnotext	"Skjul etiket på bogmærkelinje">
