--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -159,13 +159,14 @@
 <!ENTITY Ctr_cpanelmenus	"Menus de type « panneau » (marque-pages, historique, etc.) : vue compacte">
 <!ENTITY Ctr_hidezoomres	"Boutons de zoom sur une barre d'outils : masquer « Réinitialiser le niveau »">
 <!ENTITY Ctr_alt_newtabp	"Page « Nouvel onglet » (about:newtab) : apparence alternative">
+<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
 <!ENTITY Ctr_search_ui		"Barre de recherche">
-<!ENTITY Ctr_ctroldsearch	"Barre de recherche : utiliser l'ancienne interface">
-<!ENTITY Ctr_ctroldsearchc	"Effacer la boite de recherche après une recherche">
+<!ENTITY Ctr_ctroldsearch	"Utiliser l'ancienne interface">
+<!ENTITY Ctr_ctroldsearchc	"Effacer le contenu de la barre après une recherche">
 <!ENTITY Ctr_search_oit		"Ouvrir la recherche dans un nouvel onglet (paramètre about:config)">
 <!ENTITY Ctr_osearch_meoit	"Clic milieu : rechercher dans un nouvel « onglet au premier plan »">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
-<!ENTITY Ctr_osearch_dm		"Petit bouton de liste déroulante">
+<!ENTITY Ctr_osearch_iwidth	"Ajuster automatiquement la largeur de la fenêtre surgissante">
+<!ENTITY Ctr_osearch_dm		"Réduire la taille du bouton de liste déroulante">
 <!ENTITY Ctr_addonmanager	"Gestionnaire de modules">
 <!ENTITY Ctr_alt_addonsp	"Page « Plus » : ordre alternatif">
 <!ENTITY Ctr_alt_addonsm	"Apparence alternative">
@@ -183,6 +184,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Menu déroulant : apparence de menu de type « panneau »">
 <!ENTITY Ctr_bmbunsortbm	"Menu déroulant : menu « Marque-pages non classés »">
 <!ENTITY Ctr_bmbunsortbm2	"Menu au-dessus des marque-pages">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
 <!ENTITY Ctr_bmbviewbmtb	"Menu déroulant : afficher « Afficher la barre personnelle »">
 <!ENTITY Ctr_bmbnounsort	"Menu déroulant : masquer « Marque-pages non classés »">
 <!ENTITY Ctr_bmbutnotext	"Masquer le texte sur la barre personnelle">
