--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -159,6 +159,7 @@
 <!ENTITY Ctr_cpanelmenus	"Menu podręczne panelu (zakładki, historia itp.): widok kompaktowy">
 <!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
 <!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): alternatywny wygląd">
+<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
 <!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Stara wyszukiwarka">
 <!ENTITY Ctr_ctroldsearchc	"Czyść pole wyszukiwania po wyszukaniu">
@@ -183,6 +184,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Menu podręczne: wygląd menu panelu">
 <!ENTITY Ctr_bmbunsortbm	"Menu podręczne: podmenu 'nieposortowanych zakładek'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu ponad zakładkami">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
 <!ENTITY Ctr_bmbviewbmtb	"Menu podręczne: wyświetl 'Pokaż pasek narzędzi'">
 <!ENTITY Ctr_bmbnounsort	"Menu podręczne: ukryj 'nieposortowane zakładki'">
 <!ENTITY Ctr_bmbutnotext	"Ukryj etykietę na pasku zakładek">
