--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"Пам’ятати останню обрану категорію">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
 <!ENTITY Ctr_wincontrols	"Рухоме управління повноекранним режимом">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"HTML5 повноекранне попередження">
 <!ENTITY Ctr_oldtoplevimg	"Зображення «домену верхнього рівня»: класичний вигляд">
 <!ENTITY Ctr_altalertbox	"«Вікно попереджень»: альтернативний вигляд">
 <!ENTITY Ctr_emptygfavico	"Замінити типову іконку сайту">
@@ -159,12 +159,13 @@
 <!ENTITY Ctr_cpanelmenus	"Панель меню: компактний вигляд (закладки, історія тощо)">
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки (about:newtab): альтернативний вигляд">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
+<!ENTITY Ctr_search_ui		"Пошук">
 <!ENTITY Ctr_ctroldsearch	"Старий пошук">
 <!ENTITY Ctr_ctroldsearchc	"Очистити пошукове поле після пошуку">
 <!ENTITY Ctr_search_oit		"Відкрити пошук у новій вкладці (about:config preference)">
 <!ENTITY Ctr_osearch_meoit	"Середні-кліки: пошук в новій «передньоплановій вкладці»">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
+<!ENTITY Ctr_osearch_iwidth	"Автоматично налаштовувати ширину спливаючого вікна">
 <!ENTITY Ctr_osearch_dm		"Мала позначка випадного списку">
 <!ENTITY Ctr_addonmanager	"Менеджер додатків">
 <!ENTITY Ctr_alt_addonsp	"Сторінка «Детальніше» в Додатках: альтернативний вигляд">
@@ -183,6 +184,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Спливаюче вікно: вигляд меню панелі">
 <!ENTITY Ctr_bmbunsortbm	"Спливаюче вікно: субменю «несортованих закладок»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
 <!ENTITY Ctr_bmbviewbmtb	"Спливаюче вікно: показати «Огляд панелі»">
 <!ENTITY Ctr_bmbnounsort	"Спливаюче вікно: приховати «несортовані закладки»">
 <!ENTITY Ctr_bmbutnotext	"Приховати ярлик на панелі закладок">
@@ -239,7 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Рухати позначку випадного списку в останню можливу позицію">
 <!ENTITY Ctr_urlbardropm2	"Зробити позначку випадного списку завжди видимою">
 <!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
+<!ENTITY Ctr_altautocompl	"Альтернативне «автозавершення спливаючого вікна» (експериментальне)">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення» (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Зменшити висоту панелей рядку адреси та пошуку (експериментальне)">
